commiting with validation

--- a/src/main/resources/templates/admin/bid.html
+++ b/src/main/resources/templates/admin/bid.html
@@ -43,16 +43,17 @@
 								<label for="staticEmail" class="col-sm-2 col-form-label">Select
 									Match</label>
 								<div class="col-sm-10">
-									<select name="week_scroll" class="form-control" id="selected"
-										name="matchid">
+									<select  class="form-control" id="selected"
+										name="choiceMatchID.matchId">
 										<option>Select</option>
 										<option th:each="match:${matches}" th:value="${match.id}"
 											th:if="!${match.isDisabled()}"
 											th:disabled="${match.isDisabled()}"
 											th:text="${match.DATE}+'-' +${match.TEAM1} +' vs ' + ${match.TEAM2} +'- ' + ${match.TIME} +'-' + ${match.venue}"
 											th:attr="price=${match.price},secondTeam=${match.TEAM2},firstTeam=${match.TEAM1}" />
-									</select> <label th:if="${#fields.hasErrors('matchid')}"
-										class="validation-message">Please Select Match to bid</label>
+									</select> 
+<!-- 									<label th:if="${#fields.hasErrors('matchid')}" -->
+<!-- 										class="validation-message">Please Select Match to bid</label> -->
 								</div>
 							</div>
 							<div class="form-group row">
@@ -62,8 +63,9 @@
 									<select name="week_scroll" class="form-control" id="teamselect"
 										name="teamSelection">
 										<option>Select</option>
-									</select> <label th:if="${#fields.hasErrors('teamSelection')}"
-										class="validation-message">Please Select Team to bid</label>
+									</select>
+<!-- 									 <label th:if="${#fields.hasErrors('teamSelection')}" -->
+<!-- 										class="validation-message">Please Select Team to bid</label> -->
 								</div>
 							</div>
 							<div class="form-group row">
@@ -73,7 +75,7 @@
 									<input type="text" id="optionMatchPrice" class="form-control"
 										name="price" readonly="readonly">
 								</div>
-								<input type="hidden" th:value="${id}" name="id" />
+								<input type="hidden" th:value="${user.id}" name="choiceMatchID.Id" />
 							</div>
 
 							<p style="color: black" th:text="${successMessage}"></p>
